--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/zakiyousufi/my-Portfolio/issues"
   },
-  "homepage": "https://github.com/zakiyousufi/my-Portfolio#readme"
+  "homepage": "https://github.com/zakiyousufi/my-Portfolio#readme",
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.26.0"
+  }
 }
